--- a/views/login/index.html
+++ b/views/login/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="/css/style.min.css">
     <script src="/js/components/jquery/jquery.min.js"></script>
     <script src="/js/components/bootstrap/bootstrap.min.js"></script>
-    <script src="/js/components/crypto-js/core.min.js"></script>
-    <script src="/js/components/crypto-js/sha1.min.js"></script>
+    <script src="/js/components/angular/angular.min.js"></script>
+    <script src="/js/components/crypto-js/core.js"></script>
+    <script src="/js/components/crypto-js/sha1.js"></script>
+    <script src="/js/assets/app.js"></script>
+    <script src="/js/assets/login.js"></script>
     <!--[if lt IE 9]>
     <script src="/js/components/respond/respond.min.js"></script>
     <![endif]-->
