--- a/views/home/index.html
+++ b/views/home/index.html
@@ -16,7 +16,19 @@
     <link rel="stylesheet" href="/css/style.min.css">
     <script src="/js/components/jquery/jquery.min.js"></script>
     <script src="/js/components/bootstrap/bootstrap.min.js"></script>
-    <script src="/js/assets/script.min.js"></script>
+    <script src="/js/components/angular/angular.min.js"></script>
+    <script src="/js/components/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/js/components/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script>
+    <script src="/js/components/moment/moment.min.js"></script>
+    <script src="/js/components/moment/locale/zh-cn.js"></script>
+    <script src="/js/components/bootstrap/bootstrap-datetimepicker.min.js"></script>
+    <script src="/js/components/bootstrap/bootstrap-switch.min.js"></script>
+    <script src="/js/components/jquery-icheck/jquery-icheck.min.js"></script>
+    <script src="/js/components/jquery-nouislider/jquery-nouislider.min.js"></script>
+    <script src="/js/components/jquery-timegantt/jquery-timegantt.js"></script>
+    <script src="/js/components/jquery-ajaxfileupload/jquery-ajaxfileupload.js"></script>
+    <script src="/js/assets/app.js"></script>
+    <script src="/js/assets/home.js"></script>
     <!--[if lt IE 9]>
     <script src="/js/components/respond/respond.min.js"></script>
     <script src="/js/components/excanvas/excanvas.min.js"></script>
