--- a/views/system/index.html
+++ b/views/system/index.html
@@ -4,16 +4,37 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>高清网络摄像机</title>
-    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <link rel="stylesheet" href="/js/components/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/components/angular/angular-csp.css">
+    <link rel="stylesheet" href="/js/components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/js/components/jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" href="/js/components/jquery-nouislider/jquery-nouislider.min.css">
+    <link rel="stylesheet" href="/js/components/jquery-icheck/jquery-icheck.min.css">
+    <link rel="stylesheet" href="/js/components/bootstrap-colorpicker/bootstrap-colorpicker.min.css">
+    <link rel="stylesheet" href="/js/components/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="/js/components/bootstrap-switch/bootstrap-switch.min.css">
+    <link rel="stylesheet" href="/css/style.min.css">
+    <script src="/js/components/jquery/jquery.min.js"></script>
+    <script src="/js/components/bootstrap/bootstrap.min.js"></script>
+    <script src="/js/components/angular/angular.min.js"></script>
+    <script src="/js/components/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/js/components/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script>
+    <script src="/js/components/moment/moment.min.js"></script>
+    <script src="/js/components/moment/locale/zh-cn.js"></script>
+    <script src="/js/components/bootstrap/bootstrap-datetimepicker.min.js"></script>
+    <script src="/js/components/bootstrap/bootstrap-switch.min.js"></script>
+    <script src="/js/components/jquery-icheck/jquery-icheck.min.js"></script>
+    <script src="/js/components/jquery-nouislider/jquery-nouislider.min.js"></script>
+    <script src="/js/components/jquery-timegantt/jquery-timegantt.js"></script>
+    <script src="/js/components/jquery-ajaxfileupload/jquery-ajaxfileupload.js"></script>
+    <script src="/js/components/chart/chart.core.js"></script>
+    <script src="/js/components/chart/chart.line.js"></script>
+    <script src="/js/assets/app.js"></script>
+    <script src="/js/assets/system.js"></script>
     <!--[if lt IE 9]>
-    <%= javascript_include_tag 'respond.min.js' %>
+    <script src="/js/components/respond/respond.min.js"></script>
+    <script src="/js/components/excanvas/excanvas.min.js"></script>
     <![endif]-->
-    <!--[if lt IE 8]>
-    <%= stylesheet_link_tag 'bootstrap-ie7.css', media: 'all' %>
-    <%= stylesheet_link_tag 'font-awesome-ie7.min.css', media: 'all' %>
-    <%= javascript_include_tag 'json3.min.js' %>
-    <![endif]-->
-    <%= javascript_include_tag 'application' %>
 </head>
 <body>
     <div class="navbar navbar-ipc" role="navigation" ng-controller="navbarController">
