--- a/views/home/index.html
+++ b/views/home/index.html
@@ -4,35 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>高清网络摄像机</title>
-    <link rel="stylesheet" href="/js/components/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/components/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="/js/components/angular/angular-csp.css">
-    <link rel="stylesheet" href="/js/components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/js/components/jquery-ui/jquery-ui.min.css">
-    <link rel="stylesheet" href="/js/components/jquery-nouislider/jquery-nouislider.min.css">
-    <link rel="stylesheet" href="/js/components/jquery-icheck/jquery-icheck.min.css">
-    <link rel="stylesheet" href="/js/components/bootstrap-colorpicker/bootstrap-colorpicker.min.css">
-    <link rel="stylesheet" href="/js/components/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" href="/js/components/bootstrap-switch/bootstrap-switch.min.css">
-    <link rel="stylesheet" href="/css/style.min.css">
-    <script src="/js/components/jquery/jquery.min.js"></script>
-    <script src="/js/components/bootstrap/bootstrap.min.js"></script>
-    <script src="/js/components/angular/angular.min.js"></script>
-    <script src="/js/components/jquery-ui/jquery-ui.min.js"></script>
-    <script src="/js/components/bootstrap-colorpicker/bootstrap-colorpicker.min.js"></script>
-    <script src="/js/components/moment/moment.min.js"></script>
-    <script src="/js/components/moment/locale/zh-cn.js"></script>
-    <script src="/js/components/bootstrap/bootstrap-datetimepicker.min.js"></script>
-    <script src="/js/components/bootstrap/bootstrap-switch.min.js"></script>
-    <script src="/js/components/jquery-icheck/jquery-icheck.min.js"></script>
-    <script src="/js/components/jquery-nouislider/jquery-nouislider.min.js"></script>
-    <script src="/js/components/jquery-timegantt/jquery-timegantt.js"></script>
-    <script src="/js/components/jquery-ajaxfileupload/jquery-ajaxfileupload.js"></script>
-    <script src="/js/assets/app.js"></script>
-    <script src="/js/assets/home.js"></script>
+    <link rel="stylesheet" href="/js/components/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="/js/components/jquery-ui/jquery-ui.css">
+    <link rel="stylesheet" href="/js/components/jquery-nouislider/jquery-nouislider.css">
+    <link rel="stylesheet" href="/js/components/bootstrap-switch/bootstrap-switch.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/components/jquery/jquery.js"></script>
+    <script src="/js/components/bootstrap/bootstrap.js"></script>
+    <script src="/js/components/angular/angular.js"></script>
+    <script src="/js/components/jquery-ui/jquery-ui.js"></script>
+    <script src="/js/components/jquery-nouislider/jquery-nouislider.js"></script>
+    <script src="/js/components/bootstrap-switch/bootstrap-switch.js"></script>
     <!--[if lt IE 9]>
-    <script src="/js/components/respond/respond.min.js"></script>
-    <script src="/js/components/excanvas/excanvas.min.js"></script>
+    <script src="/js/components/respond/respond.js"></script>
     <![endif]-->
+    <script src="/js/app.js"></script>
+    <script src="/js/home.js"></script>
 </head>
 <body>
     <div class="navbar navbar-ipc" role="navigation" ng-controller="navbarController">
@@ -51,7 +40,7 @@
                     <a href="/settings"><i class="fa fa-cog"></i> 参数设置</a>
                 </li>
                 <li ng-if="role=='administrator'||role=='operator'">
-                    <a href="/system/index"><i class="fa fa-info-circle"></i> 系统信息</a>
+                    <a href="/system"><i class="fa fa-info-circle"></i> 系统信息</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -65,7 +54,7 @@
         </div>
     </div>
     <div class="container-fluid">
-        <%= include '_content.html' %>
+        <!-- #include virtual="_content.html" -->
     </div>
 </body>
 </html>
