--- a/views/login/index.html
+++ b/views/login/index.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>高清网络摄像机</title>
-    <link rel="stylesheet" href="/js/components/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/js/components/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="/js/components/angular/angular-csp.css">
-    <link rel="stylesheet" href="/css/style.min.css">
-    <script src="/js/components/jquery/jquery.min.js"></script>
-    <script src="/js/components/bootstrap/bootstrap.min.js"></script>
-    <script src="/js/components/angular/angular.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/components/jquery/jquery.js"></script>
+    <script src="/js/components/bootstrap/bootstrap.js"></script>
+    <script src="/js/components/angular/angular.js"></script>
     <script src="/js/components/crypto-js/core.js"></script>
     <script src="/js/components/crypto-js/sha1.js"></script>
-    <script src="/js/assets/app.js"></script>
-    <script src="/js/assets/login.js"></script>
     <!--[if lt IE 9]>
-    <script src="/js/components/respond/respond.min.js"></script>
+    <script src="/js/components/respond/respond.js"></script>
     <![endif]-->
+    <script src="/js/app.js"></script>
+    <script src="/js/login.js"></script>
 </head>
 <body class="login-body">
     <div class="container-fluid">
-        <%= include '_content.html' %>
+        <!-- #include virtual="_content.html" -->
     </div>
 </body>
 </html>
