修改页面js引用错误

--- a/views/system/index.html
+++ b/views/system/index.html
@@ -17,8 +17,8 @@
     <script src="/js/components/respond/respond.js"></script>
     <script src="/js/components/excanvas/excanvas.js"></script>
     <![endif]-->
-    <script src="/js/assets/app.js"></script>
-    <script src="/js/assets/system.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/system.js"></script>
 </head>
 <body>
     <div class="navbar navbar-ipc" role="navigation" ng-controller="navbarController">
