--- a/views/settings/index.html
+++ b/views/settings/index.html
@@ -30,8 +30,8 @@
     <!--[if lt IE 9]>
     <script src="/js/components/respond/respond.js"></script>
     <![endif]-->
-    <script src="/js/assets/app.js"></script>
-    <script src="/js/assets/settings.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/settings.js"></script>
 </head>
 <body>
     <div class="navbar navbar-ipc" role="navigation" ng-controller="navbarController">
