--- a/views/home/index.html
+++ b/views/home/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="container-fluid">
-        <!--#include virtual="_content.html" -->
+        <!--#include file="_content.html" -->
     </div>
 </body>
 </html>
