--- a/views/login/index.html
+++ b/views/login/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="login-body">
     <div class="container-fluid">
-        <!--#include virtual="_content.html" -->
+        <!--#include file="_content.html" -->
     </div>
 </body>
 </html>
