--- a/views/settings/index.html
+++ b/views/settings/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="container-fluid">
-        <!--#include virtual="_content.html" -->
+        <!--#include file="_content.html" -->
     </div>
 </body>
 </html>
