--- a/views/settings/_image.html
+++ b/views/settings/_image.html
@@ -14,7 +14,12 @@
         <input class="switch" id="dnr" name="dnr" ng-bswitch="" ng-model="dnr" type="checkbox" />
     </div>
     <div class="vlc-wrap" style="margin: 10px auto;">
-        <object classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159928" codebase="/Project1.cab#version=1,0,0,0" events="True" height="100%" id="vlc" ng-error="playVlc()" width="100%"></object>
+        <object classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921" codebase="http://download.videolan.org/pub/videolan/vlc/last/win32/axvlc.cab" events="True" height="100%" id="vlc" ng-error="playVlc()" width="100%">
+            <param name="branding" value="false" />
+            <param name="toolbar" value="false" />
+            <param name="allowfullscreen" value="false" />
+            <embed type="application/x-vlc-plugin" pluginspage="http://www.videolan.org" text="Waiting for Video" branding="false" windowless="true" allowfullscreen="false" toolbar="false" name="vlc" width="100%" height="100%" />
+        </object>
     </div>
     <hr />
     <div class="form-group">
