--- a/views/settings/_video_coverage.html
+++ b/views/settings/_video_coverage.html
@@ -11,7 +11,12 @@
         <div class="vlc-wrap pull-left">
             <div class="shelter" minheight="50" minwidth="50" ng-model="region1_rect" ng-shelter="" ng-show="current_region=='region1'&&region1.enable"></div>
             <div class="shelter" minheight="50" minwidth="50" ng-model="region2_rect" ng-shelter="" ng-show="current_region=='region2'&&region2.enable"></div>
-            <object classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159928" codebase="/Project1.cab#version=1,0,0,0" events="True" height="100%" id="vlc" ng-error="playVlc()" width="100%"></object>
+            <object classid="clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921" codebase="http://download.videolan.org/pub/videolan/vlc/last/win32/axvlc.cab" events="True" height="100%" id="vlc" ng-error="playVlc()" width="100%">
+                <param name="branding" value="false" />
+                <param name="toolbar" value="false" />
+                <param name="allowfullscreen" value="false" />
+                <embed type="application/x-vlc-plugin" pluginspage="http://www.videolan.org" text="Waiting for Video" branding="false" windowless="true" allowfullscreen="false" toolbar="false" name="vlc" width="100%" height="100%" />
+            </object>
         </div>
         <div class="sensitivity-wrap clearfix">
             <div class="form-horizontal col-sm-12">
