--- a/views/settings/_datetime.html
+++ b/views/settings/_datetime.html
@@ -16,19 +16,7 @@
     <br />
     <div class="row">
         <div class="col-sm-offset-2">
-            <input id="manual" name="datetime_type" ng-icheck="" ng-model="datetime_type" type="radio" value="1" /><label class="icheck-label" for="manual">手动设置</label>
-        </div>
-    </div>
-    <br />
-    <div class="form-group">
-        <label class="col-sm-3 control-label" for="datetime">日期时间</label>
-        <div class="col-sm-5">
-            <div class="input-group">
-                <input class="form-control" data-date-format="YYYY-MM-DD HH:mm:ss" id="datetime" ng-datetime="" ng-model="datetime" type="text" /><span class="input-group-addon"><i class="fa fa-calendar fa-lg"></i></span>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <p class="form-control-static text-danger" ng-bind="datetime_msg"></p>
+            <input id="manual" name="datetime_type" ng-icheck="" ng-model="datetime_type" type="radio" value="1" /><label class="icheck-label" for="manual">与PC时间同步</label>
         </div>
     </div>
     <br />
