--- a/views/settings/_osd.html
+++ b/views/settings/_osd.html
@@ -6,7 +6,56 @@
     <li class="action">OSD</li>
     <li class="active">OSD</li>
 </ol>
-<ul class="nav nav-tabs" role="tablist">
+<form class="form-horizontal" role="form">
+    <div class="form-group">
+        <div class="col-sm-12">
+            <button class="btn btn-sm btn-success" ng-click="show_add_modal()">
+                <i class="fa fa-plus"></i> 添加主码流项
+            </button>
+            <button class="btn btn-sm btn-success" ng-click="show_add_modal()">
+                <i class="fa fa-plus"></i> 添加子码流项
+            </button>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-12">
+            <div class="users-wrap">
+                <table class="table table-hover table-striped users">
+                    <thead>
+                        <tr>
+                            <th>类型</th>
+                            <th>位置</th>
+                            <th>背景色</th>
+                            <th>前景色透明度</th>
+                            <th>背景色透明度</th>
+                            <th>反色开关</th>
+                            <th>文本/日期格式</th>
+                            <th>字体</th>
+                            <th>字体颜色</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>
+                                <a class="fa fa-edit fa-lg" href="javascript:;" ng-click="show_edit_modal(item)" title="修改"></a>
+                                <a class="fa fa-trash-o fa-lg" href="javascript:;" ng-click="show_delete_modal(item)" title="删除"></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</form>
+<!-- <ul class="nav nav-tabs" role="tablist">
     <li ng-class="{active: osd_type == 0}">
         <a href="javascript:;" ng-click="changeOsd(0)">主码流</a>
     </li>
@@ -288,7 +337,7 @@
     <div class="col-sm-12">
         <p class="text-danger" ng-bind="valid_msg"></p>
     </div>
-</form>
+</form> -->
 <form class="form-horizontal form-ipc-footer" role="form">
     <div class="form-group clearfix">
         <div class="col-sm-offset-3 col-sm-9">
@@ -296,3 +345,66 @@
         </div>
     </div>
 </form>
+
+<div class="modal fade" id="osd_modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                    <span class="sr-only">Close</span>
+                </button>
+                <h4 class="modal-title" ng-bind="add_title"></h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label class="control-label col-sm-3" for="user_name">用户名</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" id="user_name" ng-disabled="operate_type == &quot;edit&quot;" ng-model="add_user_name" type="text" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3" for="password">密 码</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" id="password" ng-model="add_password" type="password" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-3" for="role">角 色</label>
+                        <div class="col-sm-8">
+                            <select class="form-control" id="role" ng-model="add_role">
+                                <option value="administrator">administrator</option>
+                                <option value="operator">operator</option>
+                                <option value="user">user</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <span class="text-danger pull-left" ng-bind="add_user_msg"></span>
+                <button class="btn btn-default" data-dismiss="modal" type="button">取 消</button>
+                <button class="btn btn-primary" data-loading-text="操作中..." ng-click="add_or_edit_user($event)" type="button">确 定</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="osd_confirm_modal">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="close" data-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                    <span class="sr-only">Close</span>
+                </button>
+                <h4 class="modal-title">确认</h4>
+            </div>
+            <div class="modal-body">确定要删除该用户吗？</div>
+            <div class="modal-footer">
+                <button class="btn btn-default" data-dismiss="modal" type="button">取 消</button>
+                <button class="btn btn-primary" data-loading-text="删除中..." ng-click="delete_user($event)" type="button">确 定</button>
+            </div>
+        </div>
+    </div>
+</div>
