--- a/css/less/settings.less
+++ b/css/less/settings.less
@@ -196,6 +196,12 @@
     .btn-color {
         width: 100%;
     }
+    .color-box {
+        display: inline-block;
+        width: 19px;
+        height: 19px;
+        vertical-align: middle;
+    }
 }
 
 .input {
